[gd_scene load_steps=13 format=3 uid="uid://c0xce73amgrq3"]

[ext_resource type="Script" path="res://interfaz_pre_juego.gd" id="1_4m82r"]
[ext_resource type="Texture2D" uid="uid://blb7wh6aw5cmi" path="res://Recursos/sprites/9432df3a-1675-4824-9fa8-78f755dcd038.png" id="2_1k0yh"]
[ext_resource type="Texture2D" uid="uid://b4rsvu3rt2hv1" path="res://Recursos/Fondos/06869317-8b23-46b8-b45b-5b3f034e277a.png" id="2_70ovk"]
[ext_resource type="FontFile" uid="uid://bwby7vm3wtajy" path="res://Recursos/fuentes/Kenney Mini Square.ttf" id="4_vj1mc"]
[ext_resource type="Texture2D" uid="uid://ctua08krldxx5" path="res://Recursos/Botones/botonopciones.png" id="5_q8sej"]
[ext_resource type="FontFile" uid="uid://b5004m857mone" path="res://Recursos/fuentes/Kenney Pixel Square.ttf" id="6_g2mgm"]
[ext_resource type="FontFile" uid="uid://h0lcg2ndmnti" path="res://Recursos/fuentes/Kenney Blocks.ttf" id="7_tt3lb"]
[ext_resource type="AudioStream" uid="uid://3iu2ouhpn36t" path="res://Recursos/audio/Super Mario 64 Soundtrack - Dire, Dire Docks.mp3" id="8_ox1wb"]

[sub_resource type="Animation" id="Animation_c5sjv"]
resource_name = "PC"
length = 15.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 1, 1.76293, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 0, 3, 0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 4, 5, 6, 7.04278, 9, 10, 10.8995, 11.8995, 12.9677, 13.9677),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172), Vector2(1, 1), Vector2(1, 0.826172)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 3, 4, 5, 6, 7.04278, 9, 10, 10.8995, 11.8995, 12.9677, 13.9677),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(500, 770), Vector2(500, 770), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5), Vector2(372, 580), Vector2(372, 624.5)]
}

[sub_resource type="Animation" id="Animation_3ailk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(372, 580)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.822266)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gqadw"]
_data = {
"PC": SubResource("Animation_c5sjv"),
"RESET": SubResource("Animation_3ailk")
}

[sub_resource type="LabelSettings" id="LabelSettings_d7khu"]
font = ExtResource("6_g2mgm")
font_size = 29
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="InterfazPreJuego" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4m82r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 1024.0
offset_bottom = 1536.0
scale = Vector2(0.703116, 0.832955)
texture = ExtResource("2_70ovk")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(372, 580)
scale = Vector2(1, 0.822266)
texture = ExtResource("2_1k0yh")
hframes = 3
vframes = 2
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureRect/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_gqadw")
}
autoplay = "PC"

[node name="Empezar" type="Button" parent="."]
layout_mode = 0
offset_left = 208.0
offset_top = 944.0
offset_right = 485.0
offset_bottom = 1070.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_vj1mc")
theme_override_font_sizes/font_size = 25
text = "EMPEZAR"
icon = ExtResource("5_q8sej")
icon_alignment = 1

[node name="LabelPuntaje" type="Label" parent="."]
layout_mode = 0
offset_right = 261.0
offset_bottom = 100.0
label_settings = SubResource("LabelSettings_d7khu")
vertical_alignment = 1

[node name="BotonTabla" type="Button" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 137.0
offset_right = 279.0
offset_bottom = 263.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("7_tt3lb")
theme_override_font_sizes/font_size = 40
text = "RANKING"
icon = ExtResource("5_q8sej")
icon_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_ox1wb")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="Empezar" to="." method="_on_empezar_pressed"]
[connection signal="pressed" from="BotonTabla" to="." method="_on_boton_tabla_pressed"]
